# codeup

./: CLAUDE.md  README.md  REBASE.md  REFACTOR_PROCESS.md  SHEBANG.md  bump  kill_locked_process.py  lint  pyproject.toml  setup.py  task.md  test
.github/workflows/: test-linux.yml  test-macos.yml  test-windows.yml  test.yml
ci/lint_python/: keyboard_interrupt_checker.py
src/codeup/: __init__.py  aicommit.py  api.py  args.py  command_runner.py  config.py  console.py  git_utils.py  keyring.py  main.py  running_process.py  running_process_adapter.py  shebang_processor.py  timestamp_formatter.py  utils.py
tests/: conftest.py  test_aicommit.py  test_api.py  test_argument_parsing.py  test_cli.py  test_codeup.py  test_config.py  test_git_operations.py  test_keyboard_interrupt_checker.py  test_new_api_methods.py  test_rebase_target_logic.py  test_running_process.py  test_shebang_comprehensive.py  test_streaming_polling.py  test_unpushed_commits.py  test_utilities.py
